--- a/index.html
+++ b/index.html
@@ -381,12 +381,17 @@
     <script>
       var minutos = 846 * 0.016667;
 
-      $(".pagex-delay").hide();
-      $(document).ready(function () {
-        setTimeout(function () {
-          $(".pagex-delay").show();
-        }, minutos * 1000 * 60);
-      });
+      document.getElementById(
+        "wBs4dsk8eS8bKGVIzkPHb5uLOfi8PhKd"
+      ).style.display = "none";
+      //$(".pagex-delay").hide();
+      //$(document).ready(function () {
+      setTimeout(function () {
+        document.getElementById(
+          "wBs4dsk8eS8bKGVIzkPHb5uLOfi8PhKd"
+        ).style.display = "block";
+      }, minutos * 1000 * 60);
+      //});
     </script>
     <script
       type="text/javascript"
